--- a/pom.xml
+++ b/pom.xml
@@ -235,29 +235,29 @@
         </executions>
       </plugin>
 
-      <plugin>
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>exec-maven-plugin</artifactId>
-        <version>3.2.0</version>
-        <executions>
-          <execution>
-            <id>git submodule update</id>
-            <phase>initialize</phase>
-            <configuration>
-              <executable>git</executable>
-              <arguments>
-                <argument>submodule</argument>
-                <argument>update</argument>
-                <argument>--init</argument>
-                <argument>--recursive</argument>
-              </arguments>
-            </configuration>
-            <goals>
-              <goal>exec</goal>
-            </goals>
-          </execution>
-        </executions>
-      </plugin>
+<!--      <plugin>-->
+<!--        <groupId>org.codehaus.mojo</groupId>-->
+<!--        <artifactId>exec-maven-plugin</artifactId>-->
+<!--        <version>3.2.0</version>-->
+<!--        <executions>-->
+<!--          <execution>-->
+<!--            <id>git submodule update</id>-->
+<!--            <phase>initialize</phase>-->
+<!--            <configuration>-->
+<!--              <executable>git</executable>-->
+<!--              <arguments>-->
+<!--                <argument>submodule</argument>-->
+<!--                <argument>update</argument>-->
+<!--                <argument>&#45;&#45;init</argument>-->
+<!--                <argument>&#45;&#45;recursive</argument>-->
+<!--              </arguments>-->
+<!--            </configuration>-->
+<!--            <goals>-->
+<!--              <goal>exec</goal>-->
+<!--            </goals>-->
+<!--          </execution>-->
+<!--        </executions>-->
+<!--      </plugin>-->
 
       <plugin>
         <groupId>dev.aspectj</groupId>
