--- a/pom.xml
+++ b/pom.xml
@@ -559,13 +559,13 @@
     <raml-module-builder.version>35.2.0</raml-module-builder.version>
     <vertx.version>4.5.4</vertx.version>
     <generate_routing_context>/users</generate_routing_context>
-    <junit.version>5.8.1</junit.version>
-    <folio-service-tools.version>3.1.0</folio-service-tools.version>
-    <folio-custom-fields.version>2.0.0-SNAPSHOT</folio-custom-fields.version>
+    <junit.version>5.10.0</junit.version>
+    <folio-service-tools.version>4.0.0</folio-service-tools.version>
+    <folio-custom-fields.version>2.1.0</folio-custom-fields.version>
     <ramlfiles_path>${basedir}/ramls</ramlfiles_path>
     <java.version>17</java.version>
     <aspectj.version>1.9.21.1</aspectj.version>
     <lombok.version>1.18.24</lombok.version>
-    <folio-s3-client.version>2.1.0-SNAPSHOT</folio-s3-client.version>
+    <folio-s3-client.version>2.1.0</folio-s3-client.version>
   </properties>
 </project>
