--- a/pom.xml
+++ b/pom.xml
@@ -104,6 +104,15 @@
       <artifactId>commons-lang3</artifactId>
       <version>3.14.0</version>
     </dependency>
+    <!-- downgrade commons-compress to avoid java.lang.NoSuchMethodError:
+         long org.apache.commons.io.file.attribute.FileTimes.toUnixTime
+         https://github.com/testcontainers/testcontainers-java/pull/8354
+    -->
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-compress</artifactId>
+      <version>1.26.2</version>
+    </dependency>
 
     <!-- test dependencies -->
     <dependency>
